fix(merlin-www-ads): center align infinite ads for tatler
cnduk/tatler#42

--- a/packages/merlin-www-ads/sass/tatler/_tatler_base.scss
+++ b/packages/merlin-www-ads/sass/tatler/_tatler_base.scss
@@ -160,8 +160,7 @@
     }
 }
 
-.ad--tag-inline,
-.ad--tag-infinite {
+.ad--tag-inline {
     margin: 40px (-$MOBILE_SIDE_GUTTER);
 
     @include tablet-size {
@@ -188,6 +187,8 @@
     }
 
 }
+
+.ad--tag-infinite {}
 
 .ad--tag-rail {
     display: block;
